	PR c++/26558 	* parser.c (cp_parser_class_name): Check for invalid typenames. 	Rearrange code.

* g++.dg/parse/template19.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113096 138bc75d-0d04-0410-961f-82ee72b054a4